--- a/front-end/src/components/buttons/btn-1/index.css
+++ b/front-end/src/components/buttons/btn-1/index.css
@@ -1,14 +1,14 @@
 @import url(../../../variables.css);
 
 .btn1__wrapper {
-    background-color: var(--primary-color);
-    padding: 0 .8rem;
+    background-color: var(--primary-color-dark);
+    padding: .4rem .8rem;
     border-radius: .2rem;
     transition: all 400ms ease-in-out;
 }
 
 .btn1__wrapper:hover {
-    background-color: var(--primary-color-dark);
+    background-color: var(--primary-color);
 }
 
 .btn-1__title {
