--- a/front-end/src/components/header/main-header/user-info-btn/index.css
+++ b/front-end/src/components/header/main-header/user-info-btn/index.css
@@ -1,5 +1,9 @@
 @import url(../../../../variables.css);
 
+.main-header__user__name {
+    min-width: 66px;
+}
+
 .main-header__user__info:hover span,
 svg {
     color: var(--white-color);
